--- a/public/page404.html
+++ b/public/page404.html
@@ -5,7 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="app"></div>
+    <div>页面未找到</div>
 </body>
 </html>
