--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>统一存储平台</title>
 </head>
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
